--- a/public/css/main.css
+++ b/public/css/main.css
@@ -137,3 +137,17 @@ button:active{
     background-color: #00695c;
     color: white;
 }
+
+img {
+    width: 10px;
+    height: 50px;
+    object-fit: fill;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    padding: 5px;
+  }
+
+  img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    border-radius: 4px;
+  }
