--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,6 +1,11 @@
 <nav class = "mail-header_nav">
     <ul class="main-header__item-list">
+        <li class="main-header__item"><a class="<%= pageName === 'index' ? 'active' : '' %>" href="/index">Home</a></li>
         <li class="main-header__item"><a class="<%= pageName === 'catelog' ? 'active' : '' %>" href="/catelog">Product Catelog</a></li>
-        <li class="main-header__item"><a class="<%= pageName === 'product' ? 'active' : '' %>" href="/product">Add Product</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'product' ? 'active' : '' %>" href="/addproduct">Add Product</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'editproduct' ? 'active' : '' %>" href="/editproduct">Edit Product</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'order' ? 'active' : '' %>" href="/order">Order</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'checkout' ? 'active' : '' %>" href="/checkout">Checkout</a></li>
     </ul>
 </nav>
