--- a/views/shop/catelog.ejs
+++ b/views/shop/catelog.ejs
@@ -1,8 +1,8 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 </head>
 <body class="body">
     <header class="main-header">
-        <%- include('includes/navigation.ejs') %>
+        <%- include('../includes/navigation.ejs') %>
     </header>
     <main>
         <% if(prods.length > 0 ) { %>
@@ -13,7 +13,7 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </div>
                         <div class="card__image">
-                            <img src="<%= product.url %>" alt="<%= product.title %>">
+                            <img src="<%= product.url %>" alt="<%= product.title %>" style="width:100px;height:100px;">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price"><%= product.cost %></h2>
@@ -29,4 +29,4 @@
                 <h1>No product found</h1>
         <% } %>    
     </main>
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
