Update add product and catelog UI

--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -12,11 +12,11 @@
             </div>
             <div class="form-control">
                 <label title="Cost"name="Cost">Cost</label>
-                <input type="text" name="Cost" title="Cost">
+                <input type="number" name="Cost" title="Cost" step="0.01">
             </div>
             <div class="form-control">
                 <label title="Description"name="Description">Description</label>
-                <input type="text" name="Description" title="Description">
+                <textarea type="textarea" name="Description" title="Description" rows="5"></textarea>
             </div>
             <div class="form-control">
                 <label title="ProductLink"name="ProductLink">Product Link</label>
