--- a/views/shop/catelog.ejs
+++ b/views/shop/catelog.ejs
@@ -16,7 +16,7 @@
                             <img src="<%= product.url %>" alt="<%= product.title %>" style="width:100px;height:100px;">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price"><%= product.cost %></h2>
+                            <h2 class="product__price">₹ <%= product.cost %>/-</h2>
                             <p class="product.description"><%= product.description %></p>
                         </div>
                         <div class="card__action">
