--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,12 +55,15 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea 
+{
     display: block;
     width: 100%;
 }
 
-.form-control input{
+.form-control input,
+.form-control textarea {
     border: 1px solid gold;
     font: inherit;
 }
