update code for Orders page

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,11 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+<%- include('../includes/head.ejs') %>
 </head>
-<body>
-    
-</body>
-</html>
+<body class="body">
+    <header class="main-header">
+        <%- include('../includes/navigation.ejs') %>
+    </header>
+    <main>
+        <% if(prods.length > 0 ) { %>
+            <div class="grid">
+                <% for (let product of prods) { %>
+                    <article class="card product-item">
+                        <div class="card__header">
+                            <h1 class="product__title"><%= product.title %></h1>
+                        </div>
+                        <div class="card__image">
+                            <img src="<%= product.url %>" alt="<%= product.title %>" style="width:100px;height:100px;">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="product__price">₹ <%= product.cost %>/-</h2>
+                            <p class="product.description"><%= product.description %></p>
+                        </div>
+                        <div class="card__action">
+                            <a href="../admin/edit-product" class="btn">Edit</a>
+                            <form method="POST" action="../admin/delete-product">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
+                        </div>
+                    </article>
+                <% } %>
+            </div>
+            <% } else {%>
+                <h1>No product found</h1>
+        <% } %>    
+    </main>
+<%- include('../includes/end.ejs') %>
