--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -5,7 +5,7 @@
         <li class="main-header__item"><a class="<%= pageName === 'product' ? 'active' : '' %>" href="/addproduct">Add Product</a></li>
         <li class="main-header__item"><a class="<%= pageName === 'editproduct' ? 'active' : '' %>" href="/editproduct">Edit Product</a></li>
         <li class="main-header__item"><a class="<%= pageName === 'cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
-        <li class="main-header__item"><a class="<%= pageName === 'order' ? 'active' : '' %>" href="/order">Order</a></li>
+        <li class="main-header__item"><a class="<%= pageName === 'orders' ? 'active' : '' %>" href="/orders">Your Orders</a></li>
         <li class="main-header__item"><a class="<%= pageName === 'checkout' ? 'active' : '' %>" href="/checkout">Checkout</a></li>
     </ul>
 </nav>
