Added style for mobile device

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -2,6 +2,7 @@
     width: 20rem;
     max-width: 90%;
     margin: auto;
+    display: block;
 }
 
 .product-item{
@@ -23,3 +24,4 @@
 .product-description{
     text-align: center;
 }
+
