--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -4,4 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= pageTitle %></title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/mobile.css">
