Added code for show product details

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -31,6 +31,9 @@
             <a class="<%= pageName === 'product' ? 'active' : '' %>" href="/addproduct">Add Product</a></li>
         </li>
         <li class="mobile-nav__item">
+            <a class="<%= pageName === 'editproduct' ? 'active' : '' %>" href="/editproduct">Edit Product</a></li>
+        </li>
+        <li class="mobile-nav__item">
             <a class="<%= pageName === 'product' ? 'active' : '' %>" href="/admin/products">Admin Products
             </a>
         </li>
