--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,10 @@
     margin: 1rem;
 }
 
+.centered{
+    text-align: center;
+}
+
 .main-header{
     width: 100%;
     height: 3.5rem;
@@ -97,6 +101,7 @@ button:active{
 .card__header,
 .card__content{
     padding: 1rem;
+    align-items: center;
 }
 
 .card__header h1,
@@ -106,16 +111,9 @@ button:active{
     margin: 0;
 }
 
-.card__image{
-    width: 100%;
-}
-
-.card__image {
-    width: 100%;
-}
-
 .card__image img{
-    width: 100%;
+    width: 100px;
+    height: 100px;
 }
 
 .card__actions{
@@ -144,8 +142,6 @@ button:active{
 }
 
 img {
-    width: 10px;
-    height: 50px;
     object-fit: fill;
     border: 1px solid #ddd;
     border-radius: 50%;
