--- a/views/shop/catelog.ejs
+++ b/views/shop/catelog.ejs
@@ -13,13 +13,14 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </div>
                         <div class="card__image">
-                            <img src="<%= product.url %>" alt="<%= product.title %>" style="width:100px;height:100px;">
+                            <img src="<%= product.url %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">₹ <%= product.cost %>/-</h2>
                             <p class="product.description"><%= product.description %></p>
                         </div>
                         <div class="card__action">
+                            <a href="/product/<%= product.id %>" class="btn">Details</a>
                             <form method="POST" action="/addToCart">
                                 <button class="btn" type="submit">Add To Cart</button>      
                             </form>
