--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -13,9 +13,9 @@
             <h2>₹ <%= product.cost %>/-</h2>
             <%= product.description %>
             <hr>
-            <form method="POST" action="/cart">
-                <button type="submit" name="addtocart" >Add To Cart</button>
-            </form>
+            <div>
+                <%- include('../includes/addtocart.ejs') %>
+            </div>
         </div>
     </main>
 <%- include('../includes/end.ejs') %>
