--- a/views/shop/catelog.ejs
+++ b/views/shop/catelog.ejs
@@ -8,6 +8,7 @@
         <% if(prods.length > 0 ) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
+                    <% if(product.title ) { %>
                     <article class="card product-item">
                         <div class="card__header">
                             <h1 class="product__title"><%= product.title %></h1>
@@ -16,7 +17,7 @@
                             <img src="<%= product.url %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">₹ <%= product.cost %>/-</h2>
+                             <h2 class="product__price">₹ <%= product.cost %>/-</h2>
                             <p class="product.description"><%= product.description %></p>
                         </div>
                         <div class="card__action">
@@ -24,6 +25,7 @@
                             <%- include('../includes/addtocart.ejs',{product : product}) %>
                         </div>
                     </article>
+                    <% } %>
                 <% } %>
             </div>
             <% } else {%>
