--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,1 +1,35 @@
-<%- include('../includes/boilerplate.ejs') %>
+<%- include('../includes/head.ejs') %>
+</head>
+<body class="body">
+    <header class="main-header">
+        <%- include('../includes/navigation.ejs') %>
+    </header>
+    <main>
+        <% if(prods.length > 0 ) { %>
+            <div class="grid">
+                <% for (let product of prods) { %>
+                    <% if(product.title ) { %>
+                    <article class="card product-item">
+                        <div class="card__header">
+                            <h1 class="product__title"><%= product.title %></h1>
+                        </div>
+                        <div class="card__image">
+                            <img src="<%= product.url %>" alt="<%= product.title %>">
+                        </div>
+                        <div class="card__content">
+                             <h2 class="product__price">₹ <%= product.cost %>/-</h2>
+                            <p class="product.description"><%= product.description %></p>
+                        </div>
+                        <div class="card__action">
+                            <a href="/product/<%= product.id %>" class="btn">Details</a>
+                            <%- include('../includes/addtocart.ejs',{product : product}) %>
+                        </div>
+                    </article>
+                    <% } %>
+                <% } %>
+            </div>
+            <% } else {%>
+                <h1>No product found</h1>
+        <% } %>    
+    </main>
+<%- include('../includes/end.ejs') %>
