--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,6 +146,8 @@ img {
     border: 1px solid #ddd;
     border-radius: 50%;
     padding: 5px;
+    max-height: 20rem;
+    
   }
 
   img:hover {
