Sequelize - All Tried ways to collect data for cart -- All code with rough work, added Qty too

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,7 +17,7 @@
                             <img src="<%= product.url %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">Qty : <%= product.qty %></h2>
+                            <h2 class="product__price">Qty : <%= product.cartItem.quantity %></h2>
                             <h2 class="product__price">₹ <%= product.cost %>/-</h2>
                             <p class="product.description"><%= product.description %></p>
                         </div>
